adding sticky action cell styles

--- a/src/Table/DataTable/DataTable.scss
+++ b/src/Table/DataTable/DataTable.scss
@@ -305,3 +305,13 @@ $cellHorizontalEdgePadding: 30px;
     opacity: 1;
   }
 }
+
+.stickyActionCell {
+  position: sticky;
+  right: 0;
+  //background-color: $D80;
+  //
+  //&:hover{
+  //  background-color: $B50;
+  //}
+}
