remove icon button from action cell and fixing hover when the row is highlighted or hovered

--- a/src/Table/DataTable/DataTable.scss
+++ b/src/Table/DataTable/DataTable.scss
@@ -306,7 +306,32 @@ $cellHorizontalEdgePadding: 30px;
   }
 }
 
+/* sticky action cell */
 .stickyActionCell {
   position: sticky;
   right: 0;
+}
+
+.stickyActionCell [data-hook="table-action-cell-placeholder"] {
+   display: none;
+}
+
+.table {
+  tr:hover {
+    .stickyActionCell {
+        background-color: $D80;
+    }
+
+    .clickableDataRow:hover {
+      .stickyActionCell {
+          background-color: $B50;
+      }
+    }
+  }
+
+  tr:hover.highlight{
+    .stickyActionCell {
+      background-color: $B60;
+    }
+  }
 }
